gui: prevent unnecessary horizontal scrolling

--- a/gui/public/css/dcrpool.css
+++ b/gui/public/css/dcrpool.css
@@ -8568,7 +8568,7 @@ img + span {
   vertical-align: middle; }
 
 html {
-  overflow-y: overlay;
+  overflow-y: auto;
   position: relative;
   min-height: 100%; }
 
